--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "reset-css": "^5.0.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
@@ -26,6 +27,7 @@
     "@commitlint/config-conventional": "^13.1.0",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/style-resources": "^1.2.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.29.0",
     "eslint-loader": "^4.0.2",
