--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
-    "reset-css": "^5.0.1"
+    "reset-css": "^5.0.1",
+    "vue-range-component": "xwpongithub/vue-range-slider"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
