--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
+    "lodash.isequal": "^4.5.0",
     "nuxt": "^2.15.7",
     "reset-css": "^5.0.1",
     "vue-range-component": "xwpongithub/vue-range-slider"
